# inject_db

./: Procfile  README.md  pyproject.toml  scripts.py  start.py
inject_db/: app.py
inject_db/modules/: csv_process.py  json_process.py  ods_process.py  postgres_process.py  xlsx_process.py
scripts/: app.py
scripts/modules/: xlsx_process.py
tests/unit/: test_csv_process.py  test_json_process.py  test_ods_process.py  test_xlsx_process.py
