[tool.poetry]
name = "inject_db"
version = "0.1.0"
description = ""
authors = ["Jackson Severino da Rocha <jackson.severino.rocha@escola.pr.gov.br>"]

[tool.poetry.dependencies]
python = "^3.10"
streamlit = "^1.39.0"
pandas = "^2.2.3"
sqlalchemy = "^2.0.36"
openpyxl = "^3.1.5"
psycopg2-binary = "^2.9.10"
odfpy = "^1.4.1"

[tool.poetry.group.dev.dependencies]
isort = "^5.13.2"
blue = "^0.9.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
format = "scripts:run_formatters"
start = "start:main"
